# hal

./: CMakeLists.txt  LICENSE  build-armhf.sh  build-x64.sh
other-examples/: nl80211.c  wireless.c
src/: hal.c  tcp.c
